# Functional_encryption_rust

./: Cargo.toml  LICENSE  README.md
src/: dmcfe_ip.rs  lib.rs  quadratic_sgp.rs
